Final commit Amp-it V1

--- a/readme
+++ b/readme
@@ -7,3 +7,12 @@ Remove CDN Link from header
 Make maps with every file named index so .php doesnt show up in the nav bar.
 Remove every node module file.
 Look into file size's
+
+
+
+
+
+
+Idea new website,
+Light and dark mode on different pages instead of making them the same page except pages with techinical functions like contact page.
+First make a design.
